fixed map covers screen issue

--- a/website/static/style.css
+++ b/website/static/style.css
@@ -88,8 +88,9 @@ h4{
   text-align: center;
   font-size: 1.5em;
   margin: 20px auto;
-  margin: 0%;
-  margin-top: 0.5%;
+  margin: 0%;  
+  margin-top: 8%;
+  
 }
 #progress{
   text-align: left;
